# queens

./: .gitignore  .pixi-version  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  composed.conda-lock.yml  dev-requirements.in  dev-requirements.txt  environment.base.yml  environment.dev.yml  environment.fourc.yml  environment.tutorials.yml  environment.yml  pyproject.toml  renovate.json  requirements.txt  sequential_model.py  tuto-requirements.txt
.github/: renovate.json
.github/actions/build_documentation/: action.yml
.github/actions/create_python_environment/: action.yml
.github/actions/setup-queens-pixi/: action.yml
.github/workflows/: build_documentation.yml  code_quality.yml  docker_tests.yml  documentation.yml  local_testsuite.yml  preview_documentation.yml  tests_cluster_local.yml  tests_local.yml  update_dependencies.yml
.gitlab/: .gitlab-ci.yml
.gitlab/pipeline_utils/: create_licenserc.py
doc/: README.md
doc/source/: conf.py  faq.md  index.rst  tutorials.onboarding.rst  tutorials.rst
doc/source/_ext/: create_documentation_files.py
doc/source/_static/: custom.css
doc/source/faqs/: directories.md  requirements.md
doc/source/tutorials/: 0-onboarding.rst
queens/: __init__.py
queens/data_processor/: __init__.py
queens/data_processors/: numpy.py
queens/distributions/: __init__.py  bernoulli.py  beta.py  categorical.py  distributions.py  exponential.py  free.py  lognormal.py  mean_field_normal.py  mixture.py  multinomial.py  normal.py  particles.py  uniform.py  uniform_discrete.py
queens/drivers/: __init__.py  function_driver.py  jobscript.py  jobscript_driver.py
queens/example_simulator_functions/: __init__.py
queens/external_geometry/: __init__.py
queens/interfaces/: __init__.py
queens/iterators/: __init__.py  bmfia.py  bmfmc.py  control_variates_iterator.py  grid_iterator.py  mlmc_iterator.py  mlmc_optn_iterator.py  reinforcement_learning.py  rl_iterator.py  sequential_monte_carlo_chopin.py  sobol_index_iterator.py
queens/models/: __init__.py  bmfm.py  differentiable_adjoint.py  differentiable_fd.py  model.py  rl_model.py
queens/models/likelihood_models/: __init__.py
queens/models/reinforcement_learning/: __init__.py  reinforcement_learning.py
queens/models/rl_models/: predefined_gym_model.py  rl_model.py  utils.py
queens/models/surrogate_models/: __init__.py
queens/models/surrogates/: gp_approximation_gpflow.py  gp_approximation_gpflow_svgp.py  gp_approximation_jitted.py  gp_heteroskedastic_gpflow.py
queens/parameters/: __init__.py  parameters.py
queens/parameters/fields/: __init__.py
queens/schedulers/: __init__.py
queens/stochastic_optimizers/: __init__.py
queens/utils/: __init__.py  fcc_utils.py  input_to_script.py  run_subprocess.py
queens/variational_distributions/: __init__.py  particle.py
queens/visualization/: __init__.py
src/queens/data_processors/: _data_processor.py  csv_file.py  numpy_file.py  pvd_file.py  txt_file.py
src/queens/distributions/: __init__.py  _distribution.py  beta.py  categorical.py  free_variable.py  gaussian_kde.py  mixture.py  normal.py  particle.py  truncated_normal.py
src/queens/drivers/: __init__.py  _driver.py  function.py  jobscript.py  jobscript_add_different_run_function.py  jobscript_with_dict_mapping.py  mpi.py  nested_simulation_driver.py
src/queens/iterators/: _variational_inference.py  adaptive_sampling.py  bmfia.py  bmfmc.py  elementary_effects.py  hamiltonian_monte_carlo.py  latin_hypercube_sampling.py  least_squares.py  metropolis_hastings.py  metropolis_hastings_pymc.py  nuts.py  optimization.py  reinforcement_learning.py  sequential_monte_carlo_chopin.py
src/queens/models/: adjoint.py  bmfmc.py  finite_difference.py  simulation.py  simulation_from_callable.py
src/queens/parameters/: parameters.py
src/queens/schedulers/: __init__.py  _cluster_base.py  _dask.py  _scheduler.py  cluster.py  cluster_local.py  local.py  pool.py
src/queens/utils/: ascii_art.py  classifier.py  cli.py  collection.py  config_directories.py  exceptions.py  experimental_data_reader.py  fd_jacobian.py  gpflow_transformations.py  io.py  jax_minimize_wrapper.py  logger_settings.py  mcmc.py  metadata.py  path.py  remote_build.py  remote_operations.py  rsync.py  sobol_sequence.py  type_hinting.py
src/queens/variational_distributions/: __init__.py  _variational_distribution.py  full_rank_normal.py  joint.py  mean_field_normal.py  mixture_model.py  particle.py
src/queens/visualization/: bmfia_visualization.py  grid_iterator_visualization.py
src/queens_interfaces/fourc/: README.md  driver.py  random_material_preprocessor.py
templates/jobscripts/: fourc_charon.sh
test_utils/: tutorial_tests.py
tests/: README.md  conftest.py
tests/integration_tests/cluster/: test_cluster.py  test_dask_cluster.py  test_fourc_mc_cluster.py
tests/integration_tests/cluster_local/: test_cluster_local.py
tests/integration_tests/drivers/: test_jobscript_driver.py
tests/integration_tests/fourc/: test_fourc_mc.py  test_fourc_mc_random_field_ensight.py  test_fourc_mc_random_material_field.py
tests/integration_tests/iterators/: test_bmfia.py  test_optimization.py
tests/tutorial_tests/: test_3_grid_iterator_fourc_remote.py  test_5_grid_iterator_4C_remote.py  test_5_grid_iterator_4c_remote.py  test_tutorials.py
tests/unit_tests/: conftest.py
tools/dependencies/: check_pyproject_dependency_integrity.py
tutorials/: 1-grid-iterator-rosenbrock.ipynb  1_grid_iterator_rosenbrock.ipynb  2-uncertainty-propagation-and-quantification.ipynb  3_grid_iterator_fourc_remote.ipynb  6_core_allocation.ipynb
tutorials/1-grid-iterator-rosenbrock/: 1-grid-iterator-rosenbrock-solution.ipynb  1-grid-iterator-rosenbrock.ipynb  visualize_grid_and_surface.py
tutorials/2-uncertainty-propagation-and-quantification/: 2-uncertainty_propagation.ipynb  poisson_solver.py
tutorials/3_orchestrating_4c_simulations/: plot_results.py
tutorials/5_grid_iterator_4C_remote/: 5_grid_iterator_4C_remote.ipynb
tutorials/5_grid_iterator_4c_remote/: 5_grid_iterator_4c_remote.ipynb
(+106 files in other folders)
